--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
   <link rel="canonical" href="https://weather-pwa-sample.firebaseapp.com/final/">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Weather PWA</title>
-  <link rel="stylesheet" type="text/css" href="styles/inline.css">
+  <link rel="stylesheet" type="text/css" href="./styles/inline.css">
 
   <!-- TODO add manifest here -->
-  <link rel="manifest" href="/manifest.json">
-    
+  <link rel="manifest" href="./manifest.json">
+
 </head>
 <body>
 
@@ -166,7 +166,7 @@
   </div>
 
   <!-- Uncomment the line below when ready to test with fake data -->
-  <script src="scripts/app.js" async></script>
+  <script src="./scripts/app.js" async></script>
 
 </body>
 </html>
